logs/tadiff/output.172579_4294967294.txt
Traceback (most recent call last):
  File "/home/alaa.mohamed/.conda/envs/wm/lib/python3.10/runpy.py", line 187, in _run_module_as_main
srun: error: gpu-05: task 0: Exited with exit code 1
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/home/alaa.mohamed/.conda/envs/wm/lib/python3.10/runpy.py", line 157, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/alaa.mohamed/TaDiff/scripts/test.py", line 66
    npz_keys= ['image', 'label', 'days', 'treatment'])
                                                     ^
SyntaxError: unmatched ')'
